tests/NormalTests/paczka1/small_fuzzy/54249703.err
Error in line 2: S35 S35 66,4
Error in line 5: S35 S319 52,1
Error in line 15: S35 S35 92,3
